fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,13 @@ body{
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	overflow:hidden;
 
 }
-html{	overflow:hidden;}
+
+html{
+	overflow:hidden;
+}
 #title
 {
 	position: relative;
